--- a/templates/add_game.html.j2
+++ b/templates/add_game.html.j2
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../static/styles.css">
-  <title>Add MTG Game</title>
-</head>
-<body>
+{% extends "base.html.j2" %}
+
+{% block title %}{{ player_name }} Add Game{% endblock %}
+
+{% block content %}
   <div class="page">
-    <nav class="nav">
-        <a href="/" class="btn btn-primary">Home</a>
-        <a href="/stats" class="btn btn-secondary">View Stats</a>
-    </nav>
     <h1 class="page-title">Record a New Game</h1>
     <form action="/add-game" method="POST" class="form">
       <label class="form-label">Date:<br>
@@ -49,6 +41,6 @@
     </form>
   </div>
 
-  <script src="../static/js/add_game.js"></script>
-</body>
-</html>
+<script src="{{ url_for('static', filename='js/add_game.js') }}"></script>
+
+{% endblock %}
