--- a/templates/player_detail.html.j2
+++ b/templates/player_detail.html.j2
@@ -5,8 +5,6 @@
 {% block title %}{{ player_name }} Stats{% endblock %}
 
 {% block content %}
-  <a href="{{ url_for('stats') }}" class="link link--back">← Back to Stats</a>
-  
   <h1 class="heading heading--primary">{{ player_name }}'s Stats</h1>
 
   <section class="spotlight">
@@ -38,7 +36,7 @@
       <tbody>
         {% for c in commanders %}
         <tr class="table__row">
-          <td class="table__cell">{{ c.commander_name }}</td>
+          <td class="table__cell">{{ c.name }}</td>
           <td class="table__cell">{{ c.games_played }}</td>
           <td class="table__cell">{{ c.wins }}</td>
           <td class="table__cell">{{ c.win_rate }}</td>
