--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -1,18 +1,19 @@
 <!-- index.html.j2 -->
 {% extends "base.html.j2" %}
+{% from "_macros.html.j2" import commander_modal %}
 {% block title %}Home{% endblock %}
 
 {% block content %}
   <h1 class="heading heading--primary">MTG Journal</h1>
 
-  <section class="spotlight">
+<section class="spotlight">
     <h2 class="spotlight__title">🏆 Top Win Rate</h2>
     {% if king %}
       <div class="spotlight__content">
         <p><strong>{{ king.player_name }}</strong> with a win rate of {{ king.win_rate }}% over {{ king.games_played }} games!</p>
         <div class="commander-gallery">
-          {% for img in king_imgs %}
-            <img src="{{ img }}" alt="Commander image" class="commander-gallery__image">
+          {% for commander in king_imgs %}
+            <img src="{{ commander.img }}" alt="Commander image" class="commander-gallery__image" data-commander="{{ commander.name }}">
           {% endfor %}
         </div>
       </div>
@@ -29,8 +30,8 @@
           <div class="mb-4">
             <p><strong>{{ v.player_name }}</strong> with {{ v.streak_count }} wins in a row!</p>
             <div class="commander-gallery">
-              {% for img in v.images %}
-                <img src="{{ img }}" alt="Commander image" class="commander-gallery__image">
+              {% for commander in v.commanders %}
+                <img src="{{ commander.img }}" alt="Commander image" class="commander-gallery__image" data-commander="{{ commander.name }}">
               {% endfor %}
             </div>
           </div>
@@ -40,4 +41,8 @@
       <p class="spotlight__content">No data yet.</p>
     {% endif %}
   </section>
+
+  {{ commander_modal() }}
+
+  <script src="{{ url_for('static', filename='js/commander-modal.js') }}"></script>
 {% endblock %}
