--- a/templates/stats.html.j2
+++ b/templates/stats.html.j2
@@ -1,6 +1,6 @@
 <!-- stats.html.j2 -->
 {% extends "base.html.j2" %}
-{% from "_macros.html.j2" import color_table, commander_modal %}
+{% from "_macros.html.j2" import color_table, commander_modal, commander_table %}
 
 {% block title %}Overall Stats{% endblock %}
 
@@ -39,28 +39,7 @@
   <!-- Commander Stats -->
   <section>
     <h2 class="heading heading--secondary">Commander Usage</h2>
-    <table class="table">
-      <thead>
-        <tr>
-          <th class="table__header">Commander</th>
-          <th class="table__header">Games Played</th>
-          <th class="table__header">Wins</th>
-          <th class="table__header">Win Rate (%)</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for row in commander_stats %}
-        <tr class="table__row">
-          <td class="table__cell">
-            <a href="#" class="link" data-commander="{{ row[0] }}">{{ row[0] }}</a>
-          </td>
-          <td class="table__cell">{{ row[1] }}</td>
-          <td class="table__cell">{{ row[2] }}</td>
-          <td class="table__cell">{{ row[3] }}</td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+    {{ commander_table(commander_stats, clickable=true) }}
   </section>
 
   <section>
