--- a/templates/_macros.html.j2
+++ b/templates/_macros.html.j2
@@ -48,12 +48,24 @@
 
 {% macro commander_modal(modal_id="imageModal") %}
 <div id="{{ modal_id }}" class="modal">
-  <span class="modal__close" id="{{ modal_id }}Close">&times;</span>
-  <div>
-    <img class="modal__content" id="{{ modal_id }}Image">
-    <div class="modal__actions">
-      <a id="{{ modal_id }}LinkScryfall" class="btn btn--primary" href="#" target="_blank">View on Scryfall</a>
-      <a id="{{ modal_id }}LinkEdhrec" class="btn btn--secondary" href="#" target="_blank">View on EDHREC</a>
+  <div class="modal__overlay">
+    <div class="modal__container">
+      <button class="modal__close" id="{{ modal_id }}Close" aria-label="Close modal">
+        <span>&times;</span>
+      </button>
+      
+      <div class="modal__image-container">
+        <img class="modal__content" id="{{ modal_id }}Image" alt="Commander card">
+      </div>
+      
+      <div class="modal__actions">
+        <a id="{{ modal_id }}LinkScryfall" class="btn btn--primary modal__btn" href="#" target="_blank">
+          <span class="modal__btn-text">View on Scryfall</span>
+        </a>
+        <a id="{{ modal_id }}LinkEdhrec" class="btn btn--secondary modal__btn" href="#" target="_blank">
+          <span class="modal__btn-text">View on EDHREC</span>
+        </a>
+      </div>
     </div>
   </div>
 </div>
